--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Exame final</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
 
   <style>
     @media (max-width: 767px) {
@@ -25,11 +27,34 @@
     }
   </style>
 </head>
+
 <body>
-  <header class="navbar navbar-dark shadow-sm bg-success text-white">
-    <div class="container-fluid" style="font-size:2em">Ficou de exame?</div>
+
+  <!-- <header class="navbar navbar-dark shadow-sm bg-success text-white"> -->
+  <!-- <div class="container-fluid">
+      <div style="font-size:2em">Ficou de exame?</div>
+      <div><a href="#" class="text-white" id="ajuda">Ajuda</a></div>
+    </div> -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-success">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="#">Ficou de exame?</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link text-white" href="#" id="ajuda">Ajuda</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
-  <main class="container-fluid d-flex justify-content-between flex-column align-items-center mt-4">
+
+  <main class="container-fluid d-flex justify-content-between flex-column align-items-center mt-4 mb-3">
     <h1 class="text-center">Qual sua média final?</h1>
     <form class="form-inline mt-3">
       <div class="form-group">
@@ -37,9 +62,51 @@
       </div>
       <input type="submit" class="btn btn-success ml-1" value="calcular" id="btn-calcular">
     </form>
-    <div id="resultado" class="mt-3"></div>
+    <div id="resultado" class="mt-4"></div>
   </main>
+
+  <!-- Modal -->
+  <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">Ajuda</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p><a href="http://www.ifro.edu.br/consup/index.php?option=com_docman&task=doc_details&gid=751&Itemid=11">O
+              cálculo apresentado
+              é baseado no ROA dos Cursos de Graduação do IFRO:</a></p>
+          <p>`MF = (MD * 6 + EF * 4)/10`</p>
+          <p>Onde:</p>
+          <ul>
+            <li>MF = Média Final</li>
+            <li>MD = Média da disciplina</li>
+            <li>EF = Exame Final</li>
+          </ul>
+          <p>Assim, para calcularmos quanto precisamos no exame final, utilizamos a fórmula:</p>
+          <p>`EF >= (500 - (MD * 6)) / 4`</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="assets/js/functions.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
 </body>
 
 </html>
