Corrigindo link do ROA

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <p><a href="http://www.ifro.edu.br/consup/index.php?option=com_docman&task=doc_details&gid=751&Itemid=11" target="_blank">O
+          <p><a href="http://www.ifro.edu.br/consup/index.php?option=com_docman&task=doc_download&gid=751&Itemid=11" target="_blank">O
               cálculo apresentado
               é baseado no ROA dos Cursos de Graduação do IFRO:</a></p>
           <p>`MF = (MD * 6 + EF * 4)/10`</p>
