--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
 
 <body>
 
-  <!-- <header class="navbar navbar-dark shadow-sm bg-success text-white"> -->
-  <!-- <div class="container-fluid">
-      <div style="font-size:2em">Ficou de exame?</div>
-      <div><a href="#" class="text-white" id="ajuda">Ajuda</a></div>
-    </div> -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">Ficou de exame?</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -44,7 +39,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link text-white" href="#" id="ajuda">Ajuda</span></a>
             </li>
@@ -55,7 +50,7 @@
   </header>
 
   <main class="container-fluid d-flex justify-content-between flex-column align-items-center mt-4 mb-3">
-    <h1 class="text-center">Qual sua média final?</h1>
+    <h1 class="text-center">Qual sua média da disciplina?</h1>
     <form class="form-inline mt-3">
       <div class="form-group">
         <input id="md" type="number" class="form-control" min="0" max="100" required>
@@ -76,7 +71,8 @@
           </button>
         </div>
         <div class="modal-body">
-          <p><a href="http://www.ifro.edu.br/consup/index.php?option=com_docman&task=doc_download&gid=751&Itemid=11" target="_blank">O
+          <p><a href="http://www.ifro.edu.br/consup/index.php?option=com_docman&task=doc_download&gid=751&Itemid=11"
+              target="_blank">O
               cálculo apresentado
               é baseado no ROA dos Cursos de Graduação do IFRO:</a></p>
           <p>`MF = (MD * 6 + EF * 4)/10`</p>
@@ -95,9 +91,9 @@
       </div>
     </div>
   </div>
+  <!-- modal -->
 
   <script src="assets/js/functions.js"></script>
-
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
