Adicionando alguns memes

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <input type="submit" class="btn btn-success ml-1" value="calcular" id="btn-calcular">
     </form>
     <div id="resultado" class="mt-4"></div>
+    <img id="imagem" class="d-none" style="max-width: 100%">
   </main>
 
   <!-- Modal -->
