--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </header>
 
   <main class="container-fluid d-flex justify-content-between flex-column align-items-center mt-4 mb-3">
-    <h1 class="text-center">Qual sua média da disciplina?</h1>
+    <h1 class="text-center">Qual sua média na disciplina?</h1>
     <form class="form-inline mt-3">
       <div class="form-group">
         <input id="md" type="number" class="form-control" min="0" max="100" required>
