--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           </ul>
           <p>Assim, para calcularmos quanto precisamos no exame final, utilizamos a fórmula:</p>
           <p>`EF >= (500 - (MD * 6)) / 4`</p>
+          <p><a href="https://github.com/marcoaugustoandrade/exame">Baixe o código-fonte dessa aplicação.</a></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
